RESOLVED FIXED128277
WK2: Tap highlight is positioned incorrectly in iframes
https://bugs.webkit.org/show_bug.cgi?id=128277
Summary WK2: Tap highlight is positioned incorrectly in iframes
Enrica Casucci
Reported 2014-02-05 15:51:01 PST
Created attachment 223275 [details] Test case Open the attached testcase (iframe-page.html) and tap on the link in the iframe. Note that the tap hightlight is offset. <rdar://problem/15975993>
Attachments
Test case (2.44 KB, application/zip)
2014-02-05 15:51 PST, Enrica Casucci
no flags
Patch (1.90 KB, patch)
2014-02-05 15:53 PST, Enrica Casucci
benjamin: review+
Enrica Casucci
Comment 1 2014-02-05 15:53:40 PST
Benjamin Poulain
Comment 2 2014-02-05 17:00:07 PST
Comment on attachment 223277 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=223277&action=review Thanks! > Source/WebKit2/WebProcess/WebPage/ios/WebPageIOS.mm:328 > + currentQuad.setP1(view->contentsToRootView(IntPoint(currentQuad.p1()))); > + currentQuad.setP2(view->contentsToRootView(IntPoint(currentQuad.p2()))); > + currentQuad.setP3(view->contentsToRootView(IntPoint(currentQuad.p3()))); > + currentQuad.setP4(view->contentsToRootView(IntPoint(currentQuad.p4()))); Can you please file a bug to me to convert this to floating point?
Simon Fraser (smfr)
Comment 3 2014-02-05 17:12:08 PST
Comment on attachment 223277 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=223277&action=review >> Source/WebKit2/WebProcess/WebPage/ios/WebPageIOS.mm:328 >> + currentQuad.setP1(view->contentsToRootView(IntPoint(currentQuad.p1()))); >> + currentQuad.setP2(view->contentsToRootView(IntPoint(currentQuad.p2()))); >> + currentQuad.setP3(view->contentsToRootView(IntPoint(currentQuad.p3()))); >> + currentQuad.setP4(view->contentsToRootView(IntPoint(currentQuad.p4()))); > > Can you please file a bug to me to convert this to floating point? It sucks that we all the mapping 4 times (it can be expensive). We should have a way to convert a set of points all at the same time too.
Enrica Casucci
Comment 4 2014-02-05 17:15:44 PST
(In reply to comment #3) > (From update of attachment 223277 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=223277&action=review > > >> Source/WebKit2/WebProcess/WebPage/ios/WebPageIOS.mm:328 > >> + currentQuad.setP1(view->contentsToRootView(IntPoint(currentQuad.p1()))); > >> + currentQuad.setP2(view->contentsToRootView(IntPoint(currentQuad.p2()))); > >> + currentQuad.setP3(view->contentsToRootView(IntPoint(currentQuad.p3()))); > >> + currentQuad.setP4(view->contentsToRootView(IntPoint(currentQuad.p4()))); > > > > Can you please file a bug to me to convert this to floating point? > > It sucks that we all the mapping 4 times (it can be expensive). We should have a way to convert a set of points all at the same time too. The upside is that we do this conversion only for tap highlight and only if it is not the main frame.
Enrica Casucci
Comment 5 2014-02-05 17:15:53 PST
Committed revision 163499.
Note You need to log in before you can comment on or make changes to this bug.