WK2: Tap highlight is positioned incorrectly in iframes. https://bugs.webkit.org/show_bug.cgi?id=128277 <rdar://problem/15975993>

Reviewed by Benjamin Poulain.

We need to convert the quad to root view coordinates
before returning it to the UIProcess for drawing the highlight.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::tapHighlightAtPosition):



Canonical link: https://commits.webkit.org/146285@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163499 268f45cc-cd09-0410-ab3c-d52691b4dbfc